load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "extannotations",
    srcs = ["annotations.go"],
    importpath = "github.com/thanos-io/thanos/pkg/extannotations",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prometheus_prometheus//util/annotations"],
)

alias(
    name = "go_default_library",
    actual = ":extannotations",
    visibility = ["//visibility:public"],
)
