load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "extgrpc",
    srcs = ["client.go"],
    importpath = "github.com/thanos-io/thanos/pkg/extgrpc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/server/grpc",
        "//pkg/tls",
        "//pkg/tracing",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_grpc_ecosystem_go_grpc_middleware//providers/prometheus",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//keepalive",
    ],
)

alias(
    name = "go_default_library",
    actual = ":extgrpc",
    visibility = ["//visibility:public"],
)
