load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "info",
    srcs = ["info.go"],
    importpath = "github.com/prometheus/common/pkg/info",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/info/infopb:go_default_library",
        "//pkg/store/labelpb:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":info",
    visibility = ["//visibility:public"],
)
