load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "metadata",
    srcs = [
        "metadata.go",
        "prometheus.go",
        "proxy.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/metadata",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/metadata/metadatapb",
        "//pkg/promclient",
        "//pkg/store/storepb",
        "//pkg/tracing",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_prometheus//util/annotations",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
    ],
)

alias(
    name = "go_default_library",
    actual = ":metadata",
    visibility = ["//visibility:public"],
)

go_test(
    name = "metadata_test",
    srcs = [
        "prometheus_test.go",
        "proxy_test.go",
    ],
    embed = [":metadata"],
    deps = [
        "//pkg/metadata/metadatapb",
        "//pkg/promclient",
        "//pkg/runutil",
        "//pkg/store/storepb",
        "//pkg/testutil/custom",
        "//pkg/testutil/e2eutil",
        "@com_github_efficientgo_core//testutil",
        "@com_github_go_kit_log//:log",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_prometheus//util/annotations",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_atomic//:atomic",
    ],
)
